[gd_scene load_steps=5 format=3 uid="uid://dhxxcv2t1bxp0"]

[ext_resource type="Script" uid="uid://b8qol6oytdur1" path="res://scenes/GUI/start_menu.gd" id="1_427uy"]
[ext_resource type="Texture2D" uid="uid://bja2367wgbbdp" path="res://assets/sprites/UI/MainMenu.png" id="2_dqpii"]
[ext_resource type="Texture2D" uid="uid://bdf0hxtuh2tyl" path="res://assets/sprites/UI/OverlayTexture.png" id="3_jtbm6"]
[ext_resource type="Texture2D" uid="uid://ctq3ht20bskt0" path="res://assets/backgrounds/wood.jpg" id="3_rofx1"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_427uy")

[node name="Wood" type="Sprite2D" parent="."]
position = Vector2(546.129, 336.5)
scale = Vector2(1.7302, 1.7302)
texture = ExtResource("3_rofx1")

[node name="OverlayTexture" type="Sprite2D" parent="."]
position = Vector2(-329.889, 347.5)
scale = Vector2(0.79537, 0.79537)
texture = ExtResource("3_jtbm6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1154.0
offset_bottom = 649.0
texture = ExtResource("2_dqpii")
expand_mode = 3
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 203.0
offset_top = 287.0
offset_right = 563.0
offset_bottom = 642.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="ControlsButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="CreditsButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 55)
layout_mode = 2
